--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,10 +1,10 @@
 <div class="new_top_menu" id="new_top_menu">
     <div class="line">
-        <a href="<%- page.protocol %><%- page.domain %>" rel="nofollow" class="logo"></a>
+        <a href="/" rel="nofollow" class="logo"></a>
         <div class="right">
 
             <div class="search">
-                <form action="<%- page.protocol %><%- page.domain %>/<%- page.urls.search %>/title" name="searchform" method="get">
+                <form action="/<%- page.urls.search %>/title" name="searchform" method="get">
                     <input type="text" class="search_inp" name="q" autocomplete="off" placeholder="Поиск на сайте...">
                     <input type="submit" class="search_but" value="" rel="nofollow">
                 </form>
@@ -17,18 +17,18 @@
 <div class="new_head">
     <div class="head">
         <div class="logo">
-            <a href="<%- page.protocol %><%- page.domain %>" rel="nofollow"><img src="/themes/sansa/public/images/new/logo.png" alt="Логотип"></a>
+            <a href="/" rel="nofollow"><img src="/themes/sansa/public/images/new/logo.png" alt="Логотип"></a>
         </div>
         <a href="javascript:void(0)" class="reg continueViewingBlock" id="continueViewing" style="display: none;">Остановились?</a>
         <div class="search">
-            <form action="<%- page.protocol %><%- page.domain %>/<%- page.urls.search %>/title" name="searchform" method="get">
+            <form action="/<%- page.urls.search %>/title" name="searchform" method="get">
                 <input type="text" class="search_inp" name="q" id="story" autocomplete="off" placeholder="Поиск на сайте...">
                 <input type="submit" class="search_but" value="" rel="nofollow">
             </form>
         </div>
     </div>
 
-    <% if (typeof slider == 'object' && slider.movies.length) { %>
+    <% if (typeof slider === 'object' && slider.length) { %>
 
     <div class="carousel">
 
@@ -38,7 +38,7 @@
         <div class="hs_films carousel_container">
             <ul class="hs_container">
 
-                <% slider.movies.forEach(function (movie) { %>
+                <% slider.forEach(function (movie) { %>
                 
                 <li>
                     <div class="hs_item inner">
@@ -56,10 +56,10 @@
         <div class="menu">
             <div class="links">
                 <ul>
-                    <li><a href="<%- page.protocol %><%- page.domain %>" rel="nofollow">Главная</a></li>
-                    <li><a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.collection %>">Подборки кино</a></li>
-                    <li><a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.type %>/<%- page.urls.types.movie %>">Рейтинг фильмов</a></li>
-                    <li><a href="<%- page.protocol %><%- page.domain %>/<%- page.urls.type %>/<%- page.urls.types.serial %>">Рейтинг сериалов</a></li>
+                    <li><a href="/" rel="nofollow">Главная</a></li>
+                    <li><a href="/<%- page.urls.content %>?tag=Коллекция">Подборки кино</a></li>
+                    <li><a href="/<%- page.urls.type %>/<%- page.urls.types.movie %>">Рейтинг фильмов</a></li>
+                    <li><a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>">Рейтинг сериалов</a></li>
                 </ul>
             </div>
 
@@ -69,6 +69,8 @@
                 <% if (page.social.facebook) { %><a href="<%- page.social.facebook %>" target="_blank" class="sbut fb"></a><% } %>
                 <% if (page.social.gplus) { %><a href="<%- page.social.gplus %>" target="_blank" class="sbut gp"></a><% } %>
                 <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank" class="sbut vk"></a><% } %>
+                <% if (page.social.youtube) { %><a href="<%- page.social.youtube %>" target="_blank" class="sbut yt"></a><% } %>
+                <% if (page.social.instagram) { %><a href="<%- page.social.instagram %>" target="_blank" class="sbut in"></a><% } %>
             </div>
             <% } %>
             
