--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -18,7 +18,7 @@
     <div class="others">
 
         <div class="year">
-            <a href="/<%- page.urls.type %>/<%- page.urls.types.movie %>" class="section section_2">HD фильмы</a>
+            <a href="/<%- page.urls.type %>/<%- page.urls.types.movie %>" class="section section_2">Все фильмы</a>
             <a href="/<%- page.urls.type %>/<%- page.urls.types.movie %>?sorting=premiere-up" class="section">Новинки КИНО</a>
             <ul>
                 <li><a href="/<%- page.urls.year %>">Все годы</a></li>
