--- a/views/download.ejs
+++ b/views/download.ejs
@@ -58,7 +58,9 @@
                 </div>
 
                 <div class="description">
+                    <% if (page.urls.movies.online) { %>
                     <a href="<%- movie.url %>/<%- page.urls.movies.online %>" class="w-online" rel="nofollow"></a>
+                    <% } %>
                     <% if (page.seo) { %>
                     <p><%- page.seo %></p>
                     <% } %>
@@ -130,16 +132,18 @@
 
                         <ul class="gal_line">
                             <li class="active">Скачать</li>
+                            <% if (page.urls.movies.trailer) { %>
                             <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>">Трейлер</a></li>
+                            <% } %>
+                            <% if (page.urls.movies.online) { %>
                             <li><a href="<%- movie.url %>/<%- page.urls.movies.online %>">Онлайн</a></li>
+                            <% } %>
                         </ul>
 
                         <div style="position: relative; height: 370px;">
-
                             <% if (page.player) { %>
                             <%- page.player %>
                             <% } %>
-
                         </div>
                     </div>
                 </div>
@@ -165,19 +169,25 @@
             <% } %>
 
             <% if (movie.pictures.length) { %>
-
             <div class="new_cadrs">
                 <div style="text-align: center; margin: 10px auto;">
                     <div class="cadrs_view">
-                        <div class="cadrs_container">
+                        <div class="cadrs_container" id="lightgallery">
                             <% movie.pictures.forEach(function (picture) { %>
-                            <a href="<%- movie.url %>/<%- page.urls.movies.picture %>"><img src="<%- picture.picture_min %>" alt="<%- movie.title %> <%- movie.year %> кадры" title="<%- movie.title %>"></a>
+                            <% var ahref = page.urls.movies.picture
+                                    ? movie.url + '/' + page.urls.movies.picture
+                                    : picture.picture_big %>
+                            <a href="<%- ahref %>"><img src="<%- picture.picture_min %>" alt="<%- movie.title %> <%- movie.year %> кадры" title="<%- movie.title %>"></a>
                             <% }); %>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <% if (!page.urls.movies.picture) { %>
+            <link href="/themes/drogo/public/css/lightgallery.min.css" rel="stylesheet">
+            <script src="/themes/drogo/public/js/lightgallery.min.js"></script>
+            <script>lightGallery(document.getElementById('lightgallery'));</script>
+            <% } %>
             <% } %>
 
             <% if (typeof contents === 'object' && contents.length) { %>
@@ -197,39 +207,30 @@
             <div style="clear: both"></div>
             <% } %>
 
-            <% if (typeof movies === 'object') { for (var type in movies) { if (movies.hasOwnProperty(type)) { %>
-
-            <% if (movies[type].length) { movies[type].forEach(function (category) {  %>
-
+            <% if (typeof movies === 'object') {
+                    for (var type in movies) {
+            if (movies.hasOwnProperty(type) && movies[type].length) {
+            movies[type].forEach(function (category) { %>
             <div class="relat_films">
-
                 <div class="rf_head">
                     <h4><%- category.name %></h4>
                 </div>
-
-                <% if (category.movies.length) { category.movies.forEach(function (movie) {  %>
-
+                <% if (category.movies.length) {
+                category.movies.forEach(function (movie) {  %>
                 <div class="item">
                     <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"/></a>
                     <div class="link"><a href="<%- movie.url %>"><%- movie.title %> <%- movie.year %></a></div>
                 </div>
-
                 <% }); } %>
-
             </div>
-
-            <% }); } %>
-
-            <% } } } %>
+            <% }); } } } %>
 
             <div style="clear: both;"></div>
 
             <div class="comment-list">
-
                 <% if (page.comments) { %>
                 <%- page.comments %>
                 <% } %>
-
             </div>
 
         </div>
@@ -245,10 +246,8 @@
         <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
-
             <div>Вы надавно смотрели:</div>
             <div id="recentlyViewed"></div>
-
         </div>
 
     </div>
