--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,9 +29,10 @@
 
         <div id="cinemapress-content">
 
-            <% if (typeof index === 'object') { for (var type in index) { if (index.hasOwnProperty(type)) { %>
-
-            <% if (index[type].length) { index[type].forEach(function (category) { %>
+            <% if (typeof index === 'object') {
+                for (var type in index) {
+                    if (index.hasOwnProperty(type) && index[type].length) {
+                        index[type].forEach(function (category) { %>
 
             <div class="category-name_2">
                 <h2>
@@ -41,8 +42,8 @@
 
             <div style="clear: both;"></div>
 
-            <% if (category.movies.length) { category.movies.forEach(function (movie) { %>
-
+            <% if (category.movies.length) {
+                category.movies.forEach(function (movie) { %>
             <div class="story story_m">
                 <div class="s_name">
                     <div class="fname">
@@ -51,9 +52,7 @@
                             <span><% if (movie.season && movie.episode) { %><%- movie.season %> сезон <%- movie.episode %> серия<% } else { %><%- movie.year %><% } %></span> </a>
                     </div>
                 </div>
-
                 <% if (movie.rating) { %>
-
                 <div class="rating show_rating_panel">
                     <span class="text">Общий рейтинг:</span>
                     <div class="vote-num">
@@ -61,21 +60,13 @@
                     </div>
                     <div class="clear"></div>
                 </div>
-
                 <% } %>
-
                 <div class="poster">
-
                     <div class="poster_over_2">
-
                         <a href="<%- movie.url %>" rel="nofollow" class="poster_over_2_play"></a>
                         <a href="<%- movie.url %>/<%- page.urls.movies.trailer %>" rel="nofollow" class="poster_tr"></a>
-
                     </div>
-
-                    <a href="<%- movie.url %>" rel="nofollow">
-                        <img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"> </a>
-
+                    <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"></a>
                 </div>
 
                 <div class="description">
@@ -115,17 +106,13 @@
                             <% } %>
                         </ul>
                         <div class="read-more">
-                            <a href="<%- movie.url %>" rel="nofollow" class="read"><span>Смотреть онлайн</span></a>
+                            <a href="<%- movie.url %>" rel="nofollow" class="read"><span>Подробнее ...</span></a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <% }); } %>
-
-            <% }); } %>
-
-            <% } } } %>
+            <% }); } }); } } } %>
 
             <% if (typeof page.pagination === 'object') { %>
             <div class="navigation">
@@ -164,27 +151,19 @@
         <% } %>
 
         <% if (page.seo) { %>
-
         <div style="clear: both;"></div>
-
         <div class="main-info">
-            ﻿
             <div class="page_seo">
                 <h1><%- page.title %></h1>
                 <%- page.seo %>
             </div>
-
         </div>
-
         <div style="clear: both;"></div>
-
         <% } %>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
-
             <div>Вы надавно смотрели:</div>
             <div id="recentlyViewed"></div>
-
         </div>
 
     </div>
