--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -58,7 +58,9 @@
                 </div>
 
                 <div class="description">
+                    <% if (page.urls.movies.online) { %>
                     <a href="<%- movie.url %>/<%- page.urls.movies.online %>" class="w-online" rel="nofollow"></a>
+                    <% } %>
                     <% if (page.seo) { %>
                     <p><%- page.seo %></p>
                     <% } %>
@@ -142,9 +144,11 @@
                     </div>
                 </div>
 
+                <% if (page.urls.movies.download) { %>
                 <div class="download_bl">
                     <a class="download_film" href="<%- movie.url %>/<%- page.urls.movies.download %>" rel="nofollow"></a>
                 </div>
+                <% } %>
 
             </div>
 
@@ -172,39 +176,30 @@
             <div style="clear: both"></div>
             <% } %>
 
-            <% if (typeof movies === 'object') { for (var type in movies) { if (movies.hasOwnProperty(type)) { %>
-
-            <% if (movies[type].length) { movies[type].forEach(function (category) {  %>
-
+            <% if (typeof movies === 'object') {
+                    for (var type in movies) {
+            if (movies.hasOwnProperty(type) && movies[type].length) {
+            movies[type].forEach(function (category) { %>
             <div class="relat_films">
-
                 <div class="rf_head">
                     <h4><%- category.name %></h4>
                 </div>
-
-                <% if (category.movies.length) { category.movies.forEach(function (movie) {  %>
-
+                <% if (category.movies.length) {
+                category.movies.forEach(function (movie) {  %>
                 <div class="item">
                     <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"/></a>
                     <div class="link"><a href="<%- movie.url %>"><%- movie.title %> <%- movie.year %></a></div>
                 </div>
-
                 <% }); } %>
-
             </div>
-
-            <% }); } %>
-
-            <% } } } %>
+            <% }); } } } %>
 
             <div style="clear: both;"></div>
 
             <div class="comment-list">
-
                 <% if (page.comments) { %>
                 <%- page.comments %>
                 <% } %>
-
             </div>
 
         </div>
@@ -220,10 +215,8 @@
         <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
-
             <div>Вы надавно смотрели:</div>
             <div id="recentlyViewed"></div>
-
         </div>
 
     </div>
