--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -44,7 +44,7 @@
                     <div class="hs_item inner">
                         <a href="<%- movie.url %>">
                             <div class="hs_item_play"></div>
-                            <img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>">
+                            <img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>">
                         </a>
                     </div>
                 </li>
