--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -66,9 +66,9 @@
     ﻿<div class="item">
         <div class="poster">
             <div class="sc_info">В прокате с<br> <%- movie.premiere %></div>
-            <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"></a>
+            <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>"></a>
         </div>
-        <div class="link"><a href="<%- movie.url %>"><%- movie.title %></a></div>
+        <div class="link"><a href="<%- movie.url %>"><%= movie.title %></a></div>
     </div>
 
     <% }); %>
