--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -22,7 +22,7 @@
         <div class="speedbar">
             <span id="cinemapress-speedbar">
                 <a href="/">Главная</a> &#9658;
-                <%- page.title %>
+                <%= page.title %>
             </span>
         </div>
 
@@ -35,7 +35,7 @@
         <% } %>
 
         <div class="category-name_2 category-name_2_podb">
-            <h1><%- page.title %></h1>
+            <h1><%= page.title %></h1>
         </div>
 
         <% if (typeof categories === 'object' && categories.length) { %>
@@ -44,9 +44,9 @@
         <div style="float: left; width: 50%;">
             <div style="margin: 0; padding: 10px">
                 <a href="<%- content.url %>" class="cinemapress-news">
-                    <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%- content.title %>">
+                    <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%= content.title %>">
                     <div class="cinemapress-news-title">
-                        <%- content.title %>
+                        <%= content.title %>
                     </div>
                 </a>
             </div>
