--- a/views/category.ejs
+++ b/views/category.ejs
@@ -22,7 +22,7 @@
         <div class="speedbar">
             <span id="cinemapress-speedbar">
                 <a href="/">Главная</a> &#9658;
-                <%- page.title %>
+                <%= page.title %>
             </span>
         </div>
 
@@ -35,7 +35,7 @@
         <% } %>
 
         <div class="category-name_2">
-            <h1><%- page.title %></h1>
+            <h1><%= page.title %></h1>
         </div>
 
         <div style="clear: both;"></div>
