--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -37,7 +37,7 @@
 
             <div class="story full">
 
-                <div class="s_name"><h1><%- page.title %></h1></div>
+                <div class="s_name"><h1><%= page.title %></h1></div>
 
                 <% if (movie.rating) { %>
 
@@ -200,9 +200,9 @@
             <div style="float: left; width: 50%;">
                 <div style="margin: 0; padding: 10px">
                     <a href="<%- content.url %>" class="cinemapress-news">
-                        <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%- content.title %>">
+                        <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%= content.title %>">
                         <div class="cinemapress-news-title">
-                            <%- content.title %>
+                            <%= content.title %>
                         </div>
                     </a>
                 </div>
