--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,6 +1,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title><%- page.title %></title>
-<meta name="description" content="<%- page.description %>">
+<title><%= page.title %></title>
+<meta name="description" content="<%= page.description %>">
 <link rel="shortcut icon" href="/themes/sansa/public/favicon.ico">
 
 <link href="/themes/sansa/public/css/all.css" type="text/css" rel="stylesheet">
