--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -82,9 +82,9 @@
 <div style="float: left; width: 100%;">
     <div style="margin: 0; padding: 10px 0 10px 10px">
         <a href="<%- content.url %>" class="cinemapress-news">
-            <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%- content.title %>">
+            <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%= content.title %>">
             <div class="cinemapress-news-title">
-                <%- content.title %>
+                <%= content.title %>
             </div>
         </a>
     </div>
@@ -113,7 +113,7 @@
             <% } %>
             <div class="cinemapress-recent-head-meta">
                 <div>
-                    <a href="<%- comment.url %>" style="color: #215EC3"><%- comment.title %></a>
+                    <a href="<%- comment.url %>" style="color: #215EC3"><%= comment.title %></a>
                 </div>
                 <div>
                     <span>
