--- a/views/index.ejs
+++ b/views/index.ejs
@@ -156,7 +156,7 @@
         <div style="clear: both;"></div>
         <div class="main-info">
             <div class="page_seo">
-                <h1><%- page.title %></h1>
+                <h1><%= page.title %></h1>
                 <%- page.seo %>
             </div>
         </div>
